fix tooltip z-index bug

--- a/common/styles/graphic/messaging.styl
+++ b/common/styles/graphic/messaging.styl
@@ -89,7 +89,7 @@
 	left 0
 	margin-top 2.5rem
 	padding 0
-	z-index set-index('top')
+	z-index set-index('overlay')
 	pointer-events none
 	display none
 
